--- a/heliospwm.yml
+++ b/heliospwm.yml
@@ -67,6 +67,36 @@ output:
     frequency: ${pwm_frequency} Hz
     id: fan_pwm_4
 
+# Verhältnis-Auswahl für Lüftergruppen
+select:
+  # Verhältnis-Auswahl für Wohnung (Lüfter 1:2)
+  - platform: template
+    name: "Lüfterverhältnis Wohnung"
+    id: fan_ratio_wohnung
+    optimistic: true
+    options:
+      - "1:1"
+      - "1:2"
+      - "2:3"
+      - "3:4"
+      - "3:5"
+    initial_option: "1:1"
+    icon: "mdi:scale-balance"
+    
+  # Verhältnis-Auswahl für Trockenraum (Lüfter 3:4)
+  - platform: template
+    name: "Lüfterverhältnis Trockenraum"
+    id: fan_ratio_trockenraum
+    optimistic: true
+    options:
+      - "1:1"
+      - "1:2"
+      - "2:3" 
+      - "3:4"
+      - "3:5"
+    initial_option: "1:1"
+    icon: "mdi:scale-balance"
+
 # Input controls for the GUI
 number:
   - platform: template
@@ -284,6 +314,51 @@ interval:
           uint32_t now = millis();
           uint32_t &last_swap = id(last_swap_time);
 
+          // Verbesserte Berechnung der Balancierungsfaktoren
+          // Hier berechnen wir die Faktoren so, dass die Summe der Werte nicht über 100% steigen kann
+          float ratio_factor_1 = 1.0f;
+          float ratio_factor_2 = 1.0f;
+          float ratio_factor_3 = 1.0f;
+          float ratio_factor_4 = 1.0f;
+          
+          // Verhältnisfaktoren für Wohnung berechnen
+          std::string wohnung_ratio = id(fan_ratio_wohnung).state;
+          if (wohnung_ratio == "1:1") {
+            ratio_factor_1 = 0.5f;  // Jeder Lüfter bekommt 50% der Gesamtleistung
+            ratio_factor_2 = 0.5f;
+          } else if (wohnung_ratio == "1:2") {
+            ratio_factor_1 = 0.33f; // 1/(1+2) = 1/3 der Gesamtleistung
+            ratio_factor_2 = 0.67f; // 2/(1+2) = 2/3 der Gesamtleistung
+          } else if (wohnung_ratio == "2:3") {
+            ratio_factor_1 = 0.4f;  // 2/(2+3) = 2/5 der Gesamtleistung
+            ratio_factor_2 = 0.6f;  // 3/(2+3) = 3/5 der Gesamtleistung
+          } else if (wohnung_ratio == "3:4") {
+            ratio_factor_1 = 0.43f; // 3/(3+4) = 3/7 der Gesamtleistung
+            ratio_factor_2 = 0.57f; // 4/(3+4) = 4/7 der Gesamtleistung
+          } else if (wohnung_ratio == "3:5") {
+            ratio_factor_1 = 0.375f; // 3/(3+5) = 3/8 der Gesamtleistung
+            ratio_factor_2 = 0.625f; // 5/(3+5) = 5/8 der Gesamtleistung
+          }
+          
+          // Verhältnisfaktoren für Trockenraum berechnen (gleiche Logik)
+          std::string trockenraum_ratio = id(fan_ratio_trockenraum).state;
+          if (trockenraum_ratio == "1:1") {
+            ratio_factor_3 = 0.5f;
+            ratio_factor_4 = 0.5f;
+          } else if (trockenraum_ratio == "1:2") {
+            ratio_factor_3 = 0.33f;
+            ratio_factor_4 = 0.67f;
+          } else if (trockenraum_ratio == "2:3") {
+            ratio_factor_3 = 0.4f;
+            ratio_factor_4 = 0.6f;
+          } else if (trockenraum_ratio == "3:4") {
+            ratio_factor_3 = 0.43f;
+            ratio_factor_4 = 0.57f;
+          } else if (trockenraum_ratio == "3:5") {
+            ratio_factor_3 = 0.375f;
+            ratio_factor_4 = 0.625f;
+          }
+
           // Pendelmodus-Logik 
           if (pendel) {
             uint32_t now = millis();
@@ -308,13 +383,13 @@ interval:
             fan2_speed = std::max(4.0, std::min(96.0, 50 + 0.5 * effective_speed_wohnung));
           } else {
             // Normaler Ab- und Zuluftmodus, ein Lüfter gibt Zuluft einer Abluft
-            fan1_speed = std::max(4.0, std::min(96.0, 50 + (reverse ? -1 : 1) * effective_speed_wohnung * 0.5));
-            fan2_speed = std::max(4.0, std::min(96.0, 50 + (reverse ? 1 : -1) * effective_speed_wohnung * 0.5));
+            fan1_speed = std::max(4.0, std::min(96.0, 50 + (reverse ? -1 : 1) * effective_speed_wohnung * ratio_factor_1));
+            fan2_speed = std::max(4.0, std::min(96.0, 50 + (reverse ? 1 : -1) * effective_speed_wohnung * ratio_factor_2));
           }
           
           // Trockenraumlüfter, ein Lüfter gibt Zuluft einer Abluft
-          fan3_speed = std::max(4.0, std::min(96.0, 50 + (reverse ? -1 : 1) * speed_trocken * 0.5));
-          fan4_speed = std::max(4.0, std::min(96.0, 50 + (reverse ? 1 : -1) * speed_trocken * 0.5));
+          fan3_speed = std::max(4.0, std::min(96.0, 50 + (reverse ? -1 : 1) * speed_trocken * ratio_factor_3));
+          fan4_speed = std::max(4.0, std::min(96.0, 50 + (reverse ? 1 : -1) * speed_trocken * ratio_factor_4));
           
           // Prüfen, ob individuelle Richtungswechsel für jeden Lüfter stattfinden
           // Für Lüfter 1
